# Pipeline-IQ

./: .gitignore  01_SCOPE_AND_EXECUTION_PLAN.md  02_SYSTEM_ARCHITECTURE.md  03_BACKEND_DESIGN.md  05_STEP_BY_STEP_GUIDE.md  README.md  app.py  backend_logs.txt  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  _test_e2e_gemini.py  config.py  main.py
backend/app/detection/: centrality.py  flaky.py  hybrid.py  rules.py
backend/app/evaluation/: metrics.py  seed.py
backend/app/graph/: builder.py  store.py
backend/app/ingestion/: github.py  gitlab.py
backend/app/llm/: client.py  orchestrator.py  prompts.py
backend/app/models/: failure.py  graph.py  rca.py
backend/app/normalizer/: normalizer.py
backend/app/routers/: failures.py  metrics.py  webhooks.py
backend/app/storage/: db.py  models.py  vector.py
backend/app/ws/: manager.py
docs/: 04_AI_ORCHESTRATION_AND_EVALUATION.md
frontend/: debug_front.mjs  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ConfidenceBar.tsx  LiveIndicator.tsx  StatusBadge.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: FailureDetail.tsx  Feed.tsx  Metrics.tsx
tests/: test_app.py
