[project]
name = "pipelineiq-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "anthropic>=0.34",
    "httpx>=0.27",
    "networkx>=3.3",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "chromadb>=0.5",
    "python-multipart>=0.0.9",
    "PyGithub>=2.3",
]
